--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>https://sonarcloud.io/</sonar.host.url>
 		<sonar.login>bdca268c884da4259edd40b1158ed1be82c9d5b3</sonar.login>
-		<sonar.organization>Lokeshtechnonew</sonar.organization>
-		<sonar.projectKey>lokeshtechnonewweb</sonar.projectKey>
+		<sonar.organization>lokeshtechnonewweb</sonar.organization>
+		<sonar.projectKey>lokeshtechnokeynew_web</sonar.projectKey>
 		<sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
